tests/ui/type-alias-impl-trait/method_resolution_trait_method_from_opaque.current.stderr
error: item does not constrain `Tait::{opaque#0}`, but has it in its signature
  --> $DIR/method_resolution_trait_method_from_opaque.rs:24:8
   |
LL |     fn foo(&mut self) {
   |        ^^^
   |
   = note: consider moving the opaque type's declaration and defining uses into a separate module
note: this opaque type is in the signature
  --> $DIR/method_resolution_trait_method_from_opaque.rs:17:13
   |
LL | type Tait = impl Iterator<Item = ()>;
   |             ^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

